--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "mongoose": "5.10.0",
     "morgan": "1.10.0",
     "node-url-shortener": "1.1.10",
-    "nodemailer": "6.4.11"
-  },
-  "devDependencies": {
+    "nodemailer": "6.4.11",
     "nodemon": "1.18.4"
   },
   "keywords": []
